refactor: extremes: last tmean removed -> tm
