# backend/weather/views.py
@@ -620,8 +620,8 @@ def _make_extremes_overview_query(params: dict) -> ExtremesOverviewQuery:
         type=params["type"],
         station_ids=params.get("station_ids", ()),
         station_search=params.get("station_search"),
-        tmean_min=params.get("tmean_min"),
-        tmean_max=params.get("tmean_max"),
+        tmn=params.get("tmn"),
+        tmx=params.get("tmx"),
         txn=params.get("txn"),
         txx=params.get("txx"),
         tnn=params.get("tnn"),
@@ -679,8 +679,8 @@ class TemperatureExtremesOverviewAPIView(APIView):
                 "filters": {
                     "station_search": params.get("station_search"),
                     "station_ids": list(params.get("station_ids", ())),
-                    "tmean_min": params.get("tmean_min"),
-                    "tmean_max": params.get("tmean_max"),
+                    "tmn": params.get("tmn"),
+                    "tmx": params.get("tmx"),
                     "txn": params.get("txn"),
                     "txx": params.get("txx"),
                     "tnn": params.get("tnn"),
